2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Incorporate `fvfprintf' into unique caller.

	* rcslex.c (fvfprintf): Incorporate into `aprintf'.
	* base.h (fvfprintf): Delete func decl.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Move #include <stdlib.h> to .c files.

	* base.h: Don't #include <stdlib.h>.
	* ci.c: #include <stdlib.h>.
	* co.c: Likewise.
	* ident.c: Likewise.
	* merger.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcslex.c: Likewise.
	* rcstime.c: Likewise.
	* rcsutil.c: Likewise.
	* rlog.c: Likewise.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Move #include <errno.h> to .c files.

	* base.h: Don't #include <errno.h>.
	* b-complain.c: #include <errno.h>.
	* ci.c: Likewise.
	* co.c: Likewise.
	* ident.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsedit.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcslex.c: Likewise.
	* rcsutil.c: Likewise.

2010-04-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move GCC attribute configuration into base.h.

	* base.h (exiting, printf_string): Define these
	macros based solely on GCC version -- 2.7 or higher.
	(printf_string_exiting): Define macro unconditionally.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `stdbool'.

	* Makefile.am (AM_CPPFLAGS): New var.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib to define `RCS_UNUSED'.

	* base.h (RCS_UNUSED): Update.

2010-03-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Avoid some function-static vars.

	* rcsedit.c (setmtime): Make local var `amtime' non-static.
	* rcsfnms.c [!HAVE_MKSTEMP] (homegrown_mkstemp): Likewise for `xrep'.
	* rcsrev.c [REVTEST] (main): Likewise for `numricrevno'.
	Also, do `bufautobegin' and `bufautoend' for it.
	* rcslex.c (fd2_RILE): Delete static
	local var `nothing'; use `FROM (to)', instead.

2010-03-31  Thien-Thi Nguyen  <ttn@gnuvola.org>
