@@ -21,6 +21,7 @@
 */
 
 #include "base.h"
+#include <stdarg.h>
 #include <errno.h>
 #include <ctype.h>
 #include <stdlib.h>
