@@ -1,5 +1,15 @@
 2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int C] Move #include <stdarg.h> to .c files.
+
+	* base.h: Don't #include <stdarg.h>.
+	* b-complain.c: #include <stdarg.h>.
+	* rcsgen.c: Likewise.
+	* rcslex.c: Likewise.
+	* rcsutil.c: Likewise.
+
+2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int C] Incorporate `fvfprintf' into unique caller.
 
 	* rcslex.c (fvfprintf): Incorporate into `aprintf'.
